2004-06-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: transfer duration gets better precision
	* feature: killed some static struct, reducing memory usage
	* backends: removed CHPASS function, part of MOD_USER

	* IMPORTANT: from now, uid MUST be unique for users !

2004-06-05  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: arguments not passed to custom site commands
	* bugfix: ABOR command leaves files unclosed, and non-RFC reply
	* bugfix: missing tools in visual installer

2004-05-26  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: all users created with same uid
	* bugfix: wrong reply for unknown site commands, or if errors in handler
	* cookies: %bwtotal_dl (2) %bwtotal_ul (2) to get total bandwidth used
	* cookies: %connected_users to get number of connecter users
	* feature: when running in debug mode, putlog sends into to both stdout and log
	* tcl: added self-test to detect runtime errors

2004-05-24  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new config directive: umask, to set default files/dirs permissions
	* feature: randomize PASV ports, hopefully it will avoid reusing same connections
	* feature: vars_shm (API, TCL, Perl)
	* doc: update on PERL module, server variables
	* doc: added examples for tcl and perl
	* bugfix: sfv module use case-sensitive file names on windows
	* bugfix: send_message with empty message returns garbage (TCL, Perl)

	* IMPORTANT: behaviour change: only file owner and siteop can delete
        file, except if you set a specific permission line in config file

2004-05-18  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new module: PERL
	* configure.in: display summary of detected options at end of configure
	* doc: modifications to allow generation of php
	* bugfix: allow OPTS command in login sequence to please lftp
	* bugfix: memory leaks in TCL module
	* bugfix: fixed compilation for linux when enabling UTF-8
	* bugfix: TCL: if no arguments, $wzd_arg pointer is not initialized