@@ -5,9 +5,9 @@ bin_PROGRAMS = siteconfig
 
 siteconfig_SOURCES = siteconfig.c
 
-siteconfig_LDFLAGS = @SSL_LDFLAGS@ -no-undefined -L../../src -L../../src/.libs -lwzd @PTHREAD_CFLAGS@ @PTHREAD_LIBS@ @DL_FLAGS@
+siteconfig_LDFLAGS = -no-undefined -L../../src -L../../src/.libs -lwzd $(WZD_SSL_LIBS) @PTHREAD_CFLAGS@ @PTHREAD_LIBS@ @DL_FLAGS@
 
-AM_CPPFLAGS = @SSL_CPPFLAGS@
+AM_CPPFLAGS = $(WZD_SSL_INCLUDES)
 
 if USE_ICC
 # Workaround for compilation with icc
